# succinctly

./: .editorconfig  .gitignore  1.yml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN-JQ.md  README.md  clippy.toml  deny.toml
.claude/: settings.json  settings.local.json
.claude/hooks/: check-skill-casing.sh  format-rust.sh
.claude/skills/: bit-optimization.md  json-semi-indexing.md  markdown-formatting.md  neon-simd-optimization.md  optimization-patterns.md  rust-no-std-simd.md  simd-patterns.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: block-merge.yml  ci.yml  commit-check.yml  links.yml  release.yml  security.yml
.omni-dev/: commit-guidelines.md  pr-guidelines.md  scopes.yaml
bench-compare/: Cargo.toml  README.md
bench-compare/benches/: json_parsers.rs  succinct_libs.rs  yaml_parsers.rs
bench-compare/src/: lib.rs
benches/: balanced_parens.rs  bp_select_micro.rs  dsv_bench.rs  dsv_profile.rs  elias_fano.rs  jq_comparison.rs  jq_string_ops_bench.rs  json_avx512_comparison.rs  json_escape_micro.rs  json_pipeline.rs  json_simd.rs  json_simd_common.rs  json_simd_cursor.rs  json_simd_full.rs  json_simd_indexing.rs  json_standard.rs  json_validate_bench.rs  neon_movemask.rs  pfsm_comparison.rs  pfsm_end_to_end.rs  pfsm_vs_scalar.rs  pfsm_vs_simd.rs  popcount_strategies.rs  rank_select.rs  utf8_validate_bench.rs  yaml_anchor_micro.rs  yaml_bench.rs  yaml_transcode_micro.rs  yaml_type_stack_micro.rs  yq_comparison.rs  yq_select.rs
docs/: AVX512-JSON-RESULTS.md  AVX512-VPOPCNTDQ-RESULTS.md  BETWEEN-AVX2-AND-AVX512.md  CROSS-PARSER-BENCHMARKS.md  DEVELOPER_GUIDE.md  FAILED-OPTIMIZATIONS.md  MIGRATION-FROM-LOCAL-BRANCH.md  MIGRATION-SUMMARY.md  OPTIMIZATION-SUMMARY.md  PERFORMANCE-OUTCOMES-SUMMARY.md  PFSM-PARALLEL-PLAN.md  README.md  RECOMMENDED-OPTIMIZATIONS.md  STYLE_GUIDE.md  UNDERSTANDING-DEFAULT-FEATURES.md  USER_GUIDE.md  balanced-parens.md  bitvec.md  developer-guide.md  dsv-index.md  dsv-performance.md  dsv-port-plan.md  dsv-profiling-analysis.md  haskell-works.md  implemented-optimizations.md  index.md  jq-comparison.md  jq-evaluator.md  json-index.md  log.md  optimization-opportunities.md  performance-analysis.md  plan-balanced-parens.md  plan-rank-select.md  runtime-dispatch-implications.md  simd-strategy.md  user-guide.md  yaml-build-matrix.md  yaml-index.md  yq-comparison.md  (+1 more)
docs/adrs/: README.md  adr-0000.md  adr-0001.md  adr-0002.md  adr-0003.md  adr-0004.md  adr-0005.md  adr-0006.md  adr-0007.md  adr-0008.md  adr-0009.md  adr-0010.md  adr-0011.md
docs/architecture/: README.md  balanced-parens.md  bitvec.md  core-concepts.md  prior-art.md  semi-indexing.md
docs/archive/: failed-optimizations.md  jq-implementation-plan.md  migration-from-local-branch.md  migration-summary.md  pfsm-parallel-plan.md  pfsm-results.md  rank-select.md  runtime-dispatch-implications.md
docs/benchmarks/: README.md  cross-language.md  directory.md  dsv.md  inventory.md  jq.md  json-validate.md  rust-parsers.md  rust-succinct-libs.md  rust-yaml-parsers.md  utf8-validate.md  yq.md
docs/getting-started/: README.md  examples.md  installation.md  quickstart.md
docs/guides/: README.md  api.md  benchmarking.md  cli.md  developer.md  release.md
docs/haskell-works/: hw-aeson.md  hw-bits.md  hw-hspec-hedgehog.md  hw-json-simd.md  hw-json.md  hw-mquery.md  hw-string-parse.md  hw-xml.md
docs/optimisations/: README.md  simd.md  state-machines.md
docs/optimizations/: README.md  access-patterns.md  bit-manipulation.md  branchless.md  cache-memory.md  end-positions.md  hierarchical-structures.md  history.md  jq-string-search.md  lookup-tables.md  parallel-prefix.md  simd-strategy.md  simd.md  state-machines.md  targets.md  zero-copy.md
docs/parsing/: README.md  dsv-index.md  dsv.md  json-index.md  json.md  yaml-index.md  yaml-succinct.md  yaml.md
docs/plan/: README.md  compact-index-investigation.md  documentation-refactor.md  generic-eval-refactor.md  jq-completeness.md  jq-remaining.md  jq.md  m2-benchmark-improvements.md  sve2-optimizations.md  yaml-index-post-compactrank.md  yq-implementation-plan.md  yq-memory-optimization.md  yq-remaining.md  yq-specification.md  yq-test-suite.md  yq.md
docs/reference/: README.md  environment-variables.md  jq-evaluator.md  jq-language.md  limits.md  yq-language.md
examples/: dsv_profile.rs  dsv_quick_bench.rs  profile_phases.rs  rank_select_profile.rs  size_comparison.rs  test_anchor.rs  yaml_profile.rs
scripts/: build.sh  run-ascii-cinema-demo.sh  setup-ascii-cinema-demo.sh  sync-jq-golden.sh  sync-yaml-test-suite.sh  sync-yq-golden.sh  test-sve2-qemu.sh  test.sh
src/: binary.rs  bitvec.rs  bp.rs  broadword.rs  lib.rs  popcount.rs  rank.rs  select.rs  table.rs
src/bits/: bitvec.rs  compact_rank.rs  elias_fano.rs  mod.rs  popcount.rs  rank.rs  select.rs
src/dsv/: config.rs  cursor.rs  index.rs  index_lightweight.rs  mod.rs  parser.rs
src/jq/: document.rs  eval.rs  eval_generic.rs  expr.rs  lazy.rs  mod.rs  parser.rs  stream.rs  value.rs
src/json/: bit_writer.rs  light.rs  locate.rs  mod.rs  pfsm.rs  pfsm_optimized.rs  pfsm_tables.rs  simple.rs  simple_light.rs  standard.rs  validate.rs  validate_simd.rs
src/simd/: mod.rs  neon.rs  x86.rs
src/text/: mod.rs  utf8.rs
src/trees/: bp.rs  mod.rs
src/util/: broadword.rs  (+2 more)
tests/: binary_tests.rs  bitread_tests.rs  bp_coverage_tests.rs  bp_properties.rs  cli_characterization_tests.rs  cli_golden_tests.rs  deep_nesting_valid_tests.rs  dsv_cli_tests.rs  dsv_select_tests.rs  dsv_simd_differential_tests.rs  jq_cli_tests.rs  jq_evaluator_parity_tests.rs  jq_golden_tests.rs  jq_numeric_equality_tests.rs  jq_tests.rs  json_indexing_tests.rs  json_validate_tests.rs  pfsm_correctness.rs  properties.proptest-regressions  properties.rs  property_tests.rs  serde_tests.rs  simd_expectation_tests.rs  simd_level_tests.rs  text_cli_tests.rs  yaml_locate_regression_test.rs  yaml_test_suite.rs  yq_cli_tests.rs  yq_golden_tests.rs  yq_path_consistency_tests.rs
(+195 files in other folders)
